# mathematical-expression-py

./: README-Chinese.md  README.md  main.py  pyproject.toml
core/: __init__.py
core/calculation/: Calculation.py  __init__.py
core/calculation/bool/: booleanCalculation.py  booleanCalculation2.py
core/calculation/function/: Function.py
core/calculation/number/: bracketsCalculation.py  bracketsCalculation2.py  cumulativeCalculation.py  functionFormulaCalculation.py  numberCalculation.py  prefixExpressionOperation.py
core/container/: CalculationBooleanResults.py  CalculationNumberResults.py  CalculationResults.py
core/manager/: CalculationManagement.py
exceptional/: AbnormalOperation.py  ExtractException.py  WrongFormat.py  __init__.py
mathematical_expression/: __init__.py
mathematical_expression/core/calculation/: Calculation.py  SharedCalculation.py
mathematical_expression/core/calculation/function/: Function.py  (+1 more)
mathematical_expression/core/container/: CalculationBooleanResults.py  CalculationNumberResults.py  CalculationResults.py
mathematical_expression/core/manager/: CalculationManagement.py  ConstantRegion.py  __init__.py
mathematical_expression/exceptional/: AbnormalOperation.py  ExtractException.py  UnsupportedOperationException.py  WrongFormat.py  __init__.py
mathematical_expression/utils/: NumberUtils.py  StrUtils.py  __init__.py
update/: log01_1.0.2_1.1.2.md  log02_1.1.2_1.1.5.md  log03_1.1.5_1.2.md  log03_1.2_1.2.1.md  log04_1.2,1_1.2.2.md  log05_1.2.1_1.2.4.md  log06_1.2.4_1.2.5.md
utils/: NumberUtils.py  StrUtils.py  __init__.py
(+12 files in other folders)
